# cpptdx

./: .gitignore  CMakeLists.txt  README.md
config/: application.yml
include/: tdx_hq_api.h  tdxhq_api.h
src/: app.h  config.h  rpc_service.cpp  rpc_service.h  tdx_base.h  tdx_client.cpp  tdx_hq_api_impl.cpp  tdx_hq_api_impl.h  tdxhq_api_impl.cpp  tdxhq_api_impl.h  tdxhq_server.cpp  utils.h
src/msg/: base_msg.h  get_finance_info.h  get_security_klines.h  get_security_list.h  get_security_snapshot.h
src/proto/: CMakeLists.txt  rpc_server.proto  server.proto
src/tdx/: tdxhq_api_impl.cpp  tdxhq_api_impl.h  utils.h
